--- a/gateway-agent/pom.xml
+++ b/gateway-agent/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-context</artifactId>
+            <version>4.0.4</version>
+        </dependency>
     </dependencies>
 
     <build>
