--- a/gateway-agent/src/main/resources/application.properties
+++ b/gateway-agent/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+environment.name=production
+environment.proxyServerAddress=192.0.2.0
+environment.proxyServerPort=8080
+environment.faultInjectorEnabled=true
+environment.divertPercentage=0.1
