--- a/gateway-agent/pom.xml
+++ b/gateway-agent/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>spring-cloud-context</artifactId>
             <version>4.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.13.10</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
