--- a/gateway-agent/src/main/resources/application.properties
+++ b/gateway-agent/src/main/resources/application.properties
@@ -1,5 +1,19 @@
-environment.name=production
-environment.proxyServerAddress=192.0.2.0
-environment.proxyServerPort=8080
-environment.faultInjectorEnabled=true
-environment.divertPercentage=0.1
+
+server.port=8080
+
+environment.name=DevelopmentEnvironment
+environment.proxyServerAddress=localhost
+environment.proxyServerPort=8081
+environment.faultInjectorEnabled=false
+environment.divertPercentage=0.5
+environment.origTargetAddress=original-service-hostname
+environment.origTargetPort=80
+##managementSystemEndpoint??
+environment.managementSystemEndpoint=http://monitoring-system-endpoint.com/api
+# ??????
+monitoring.reportRate=60000 # ?60???????
+# ??????
+logging.level.root=WARN
+logging.level.org.springframework.web=INFO
+logging.level.com.yourcompany=DEBUG
+
