--- a/fault-injection-manager/src/main/resources/application.properties
+++ b/fault-injection-manager/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+#spring.elasticsearch.rest.uris=
+spring.elasticsearch.uris=http://192.168.56.115:9200
+spring.elasticsearch.connection-timeout=10000
+spring.elasticsearch.username=
+spring.elasticsearch.password=
+
+logging.config=classpath:src/main/resources/log4j2.xml
+
+spring.data.redis.database=0
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.timeout=5000
