--- a/gateway-agent/src/main/resources/application.properties
+++ b/gateway-agent/src/main/resources/application.properties
@@ -10,9 +10,9 @@ environment.origTargetAddress=original-service-hostname
 environment.origTargetPort=80
 ##managementSystemEndpoint??
 environment.managementSystemEndpoint=http://monitoring-system-endpoint.com/api
-# ??????
-monitoring.reportRate=60000 # ?60???????
-# ??????
+
+monitoring.reportRate=60000 
+
 logging.level.root=WARN
 logging.level.org.springframework.web=INFO
 logging.level.com.yourcompany=DEBUG
